--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ allprojects {
     }
 
     ext {
-        set('springCloudVersion', "Hoxton.M3")
+//        set('springCloudVersion', "Hoxton.M3")
         set('elasticsearchVersion', '6.8.4')
     }
 
@@ -70,15 +70,38 @@ allprojects {
         implementation 'mysql:mysql-connector-java:8.0.28'
 
         // Test
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
-        testImplementation 'org.mockito:mockito-core:3.3.3'
+//        testImplementation('org.springframework.boot:spring-boot-starter-test') {
+//            exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+//            exclude group: 'org.junit.platform', module: 'junit-platform-commons'
+//        }
+
+        testImplementation 'org.junit.jupiter:junit-jupiter-api'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+        testImplementation 'org.junit.platform:junit-platform-launcher'
+        testImplementation 'org.junit.platform:junit-platform-commons'
+
+        // --- Mockito ---
+        testImplementation 'org.mockito:mockito-core:5.11.0'
+
+        // --- Cucumber ---
+        testImplementation 'io.cucumber:cucumber-java:7.14.0'
+        testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.14.0'
+
+        // --- RestAssured + Jackson ---
+        testImplementation 'io.rest-assured:rest-assured:5.4.0'
+        testImplementation 'io.rest-assured:json-path:5.4.0'
+
+        // --- Otros útiles ---
         testImplementation 'com.github.javafaker:javafaker:1.0.1'
-        testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
+        testImplementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
+        testImplementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.0'
+        testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+
     }
 
     dependencyManagement {
         imports {
-            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+            mavenBom "org.junit:junit-bom:5.10.0"
         }
     }
 
@@ -122,7 +145,10 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter-web:3.1.5'
 
         testImplementation rootProject.sourceSets.main.output
-        testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.5'
+        testImplementation('org.springframework.boot:spring-boot-starter-test:3.1.5') {
+            exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+            exclude group: 'org.junit.platform', module: 'junit-platform-commons'
+        }
 
         if (project.name != "shared") {
             implementation project(":shared")
